Fixed spacing on h4

--- a/microsite/assets/css/style.css
+++ b/microsite/assets/css/style.css
@@ -101,6 +101,11 @@ p {
   font-size: 1.2rem;
 }
 
+h4 {
+  margin-bottom: 0rem;
+  margin-top: 2rem;
+}
+
 @media screen and (max-width: 600px) {
   #logo {
     height: 5rem;
@@ -122,6 +127,6 @@ p {
   }
 
   nav ul li a {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
   }
 }
